resolve wrapping under connect with us section

--- a/src/components/contacts.css
+++ b/src/components/contacts.css
@@ -4,8 +4,6 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 50%;
-  height: 100%;
   color: white;
 }
 
